[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-indicators"
version = "0.1.0"
description = "Technical indicators library with frame synchronization for trading applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Morgiver"}
]
keywords = ["trading", "indicators", "technical-analysis", "rsi", "macd", "sma", "bollinger-bands"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.20.0",
    "TA-Lib>=0.4.24",
    "trading-frame @ git+https://github.com/Morgiver/trading-frame.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "yfinance>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/Morgiver/trading-indicators"
Repository = "https://github.com/Morgiver/trading-indicators"
Issues = "https://github.com/Morgiver/trading-indicators/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=trading_indicators --cov-report=term-missing"

